[tool.poetry]
name = "greeter"
version = "0.1.0"
description = ""
authors = ["vxwz <vxwz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "6.1.2"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
